lib_LIBRARIES=libchmfile.a
libchmfile_a_SOURCES = libchmfile.cpp libchmfile_search.cpp libchmfileimpl.cpp \
	libchmtextencoding.cpp libchmtocimage.cpp qt34.cpp
noinst_HEADERS = libchmfile.h bitfiddle.h libchmfileimpl.h libchmtextencoding.h \
	libchmtocimage.h libchmurlfactory.h qt34.h

INCLUDES = $(QT_INCLUDES) $(CHM_INCLUDES) $(KDE_INCLUDES)

METASOURCES = AUTO
KDE_OPTIONS = qtonly
