lib_LIBRARIES=libkdeextra.a
libkdeextra_a_SOURCES = kchmdcopiface.cpp kchmdcopiface.skel kchmviewwindow_khtmlpart.cpp
noinst_HEADERS = kchmdcopiface.h kchmviewwindow_khtmlpart.h

INCLUDES = $(QT_INCLUDES) $(CHM_INCLUDES) $(KDE_INCLUDES) $(LIBCHMFILE_INCLUDES)

METASOURCES = AUTO
KDE_OPTIONS = qtonly
